# Feathercoin

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Dockerfile  INSTALL  INSTALL.md  Makefile.am  Makefile.am.user.4.10-pre1  Makefile.in  README.md  aclocal.m4  autogen.sh  bitcoin-qt.pro  configure.ac  feathercoin-qt.pro  libbitcoinconsensus.pc  libtool
.github/: PULL_REQUEST_TEMPLATE.md
.travis/: test_04_install.sh  test_06_script_a.sh  test_06_script_b.sh
MSVC/: FeathercoinSolution.sln  README.md
contrib/: bitcoin-qt.pro  feathercoin-qt.pro  gitian-build.sh
doc/: Doxyfile  README.md  README_windows.txt  Tor.txt  assets-attribution.md  benchmarking.md  bips.md  build-msw.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  coding.md  developer-notes.md  dnsseed-policy.md  gitian-building.md  init.md  multiwallet-qt.md  readme-qt.rst  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  unit-tests.md  zmq.md
doc/man/: Makefile.am  Makefile.in  feathercoin-cli.1  feathercoin-qt.1  feathercoin-tx.1  feathercoin-wallet.1  feathercoin.conf.5  feathercoind.1
doc_install/: release-notes-0.9.0.md  release-notes-0.9.6.2.md  release-notes-0.9.6.md
m4/: bitcoin_find_bdb48.m4  bitcoin_find_bdb51.m4
share/: genbuild.sh  setup.nsi  setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.bench.include  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.cpp  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  base40.h  base58.cpp  base58.h  bignum.h  (+114 more)
(+589 files in other folders)
