dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=feathercoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=feathercoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=feathercoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=feathercoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=feathercoin-wallet.1
endif
endif
